# LearnOpenGL

./: .gitignore  CMakeLists.txt  LearnOpenGL.sln
Dependencies/glad/include/glad/: glad.h
LearnOpenGL/: LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h  main.cpp
LearnOpenGL/res/shaders/: Basic.shader
include/: IndexBuffer.h  Texture.h
src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  glad.c  main.cpp
